--- a/app/views/pedidos/show.html.erb
+++ b/app/views/pedidos/show.html.erb
@@ -1,6 +1,6 @@
 <p>
-  <b>Oficial:</b>
-  <%=h @pedido.oficial %>
+  <b>Tipo:</b>
+  <%=h @pedido.tipo %>
 </p>
 
 <p>
@@ -54,8 +54,8 @@
 </p>
 
 <p>
-  <b>Nome comprador:</b>
-  <%=h @pedido.nome_comprador %>
+  <b>Comprador:</b>
+  <%=h @pedido.comprador %>
 </p>
 
 <p>
@@ -64,23 +64,8 @@
 </p>
 
 <p>
-  <b>Vendedor:</b>
-  <%=h @pedido.vendedor_id %>
-</p>
-
-<p>
-  <b>Operador:</b>
-  <%=h @pedido.operador_id %>
-</p>
-
-<p>
-  <b>Telemarketing:</b>
-  <%=h @pedido.telemarketing_id %>
-</p>
-
-<p>
-  <b>Plano pagamento:</b>
-  <%=h @pedido.plano_pagamento_id %>
+  <b>Funcionario:</b>
+  <%=h @pedido.funcionario_id %>
 </p>
 
 <p>
@@ -99,8 +84,23 @@
 </p>
 
 <p>
-  <b>Preco especial:</b>
-  <%=h @pedido.preco_especial %>
+  <b>Operador:</b>
+  <%=h @pedido.operador_id %>
+</p>
+
+<p>
+  <b>Telemarketing:</b>
+  <%=h @pedido.telemarketing_id %>
+</p>
+
+<p>
+  <b>Especial:</b>
+  <%=h @pedido.especial %>
+</p>
+
+<p>
+  <b>Registro:</b>
+  <%=h @pedido.registro %>
 </p>
 
 <p>
@@ -119,8 +119,8 @@
 </p>
 
 <p>
-  <b>Funcionario estorno:</b>
-  <%=h @pedido.funcionario_estorno_id %>
+  <b>Operador estorno:</b>
+  <%=h @pedido.operador_estorno_id %>
 </p>
 
 <p>
@@ -139,13 +139,13 @@
 </p>
 
 <p>
-  <b>Desconto complemetar:</b>
-  <%=h @pedido.desconto_complemetar %>
+  <b>Desconto complementar:</b>
+  <%=h @pedido.desconto_complementar %>
 </p>
 
 <p>
-  <b>Autorizador desconto:</b>
-  <%=h @pedido.autorizador_desconto_id %>
+  <b>Autorizador:</b>
+  <%=h @pedido.autorizador_id %>
 </p>
 
 
