--- a/app/views/funcionarios/new.html.erb
+++ b/app/views/funcionarios/new.html.erb
@@ -121,7 +121,7 @@
   </p>
   <p>
     <%= f.label :demissao %><br />
-    <%= f.text_field :demissao %>
+    <%= f.date_select :demissao %>
   </p>
   <p>
     <%= f.label :observacao %><br />
@@ -136,7 +136,7 @@
     <%= f.text_field :email %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit 'Create' %>
   </p>
 <% end %>
 
