--- a/app/views/pedidos/edit.html.erb
+++ b/app/views/pedidos/edit.html.erb
@@ -4,8 +4,8 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :oficial %><br />
-    <%= f.check_box :oficial %>
+    <%= f.label :tipo %><br />
+    <%= f.check_box :tipo %>
   </p>
   <p>
     <%= f.label :data %><br />
@@ -48,28 +48,16 @@
     <%= f.text_field :transportadora_id %>
   </p>
   <p>
-    <%= f.label :nome_comprador %><br />
-    <%= f.text_field :nome_comprador %>
+    <%= f.label :comprador %><br />
+    <%= f.text_field :comprador %>
   </p>
   <p>
     <%= f.label :observacao %><br />
     <%= f.text_area :observacao %>
   </p>
   <p>
-    <%= f.label :vendedor_id %><br />
-    <%= f.text_field :vendedor_id %>
-  </p>
-  <p>
-    <%= f.label :operador_id %><br />
-    <%= f.text_field :operador_id %>
-  </p>
-  <p>
-    <%= f.label :telemarketing_id %><br />
-    <%= f.text_field :telemarketing_id %>
-  </p>
-  <p>
-    <%= f.label :plano_pagamento_id %><br />
-    <%= f.text_field :plano_pagamento_id %>
+    <%= f.label :funcionario_id %><br />
+    <%= f.text_field :funcionario_id %>
   </p>
   <p>
     <%= f.label :endereco_entrega %><br />
@@ -84,8 +72,20 @@
     <%= f.text_field :area_id %>
   </p>
   <p>
-    <%= f.label :preco_especial %><br />
-    <%= f.check_box :preco_especial %>
+    <%= f.label :operador_id %><br />
+    <%= f.text_field :operador_id %>
+  </p>
+  <p>
+    <%= f.label :telemarketing_id %><br />
+    <%= f.text_field :telemarketing_id %>
+  </p>
+  <p>
+    <%= f.label :especial %><br />
+    <%= f.check_box :especial %>
+  </p>
+  <p>
+    <%= f.label :registro %><br />
+    <%= f.date_select :registro %>
   </p>
   <p>
     <%= f.label :empresa_id %><br />
@@ -100,8 +100,8 @@
     <%= f.date_select :estorno %>
   </p>
   <p>
-    <%= f.label :funcionario_estorno_id %><br />
-    <%= f.text_field :funcionario_estorno_id %>
+    <%= f.label :operador_estorno_id %><br />
+    <%= f.text_field :operador_estorno_id %>
   </p>
   <p>
     <%= f.label :comissao_vendedor %><br />
@@ -116,15 +116,15 @@
     <%= f.check_box :venda_externa %>
   </p>
   <p>
-    <%= f.label :desconto_complemetar %><br />
-    <%= f.text_field :desconto_complemetar %>
+    <%= f.label :desconto_complementar %><br />
+    <%= f.text_field :desconto_complementar %>
   </p>
   <p>
-    <%= f.label :autorizador_desconto_id %><br />
-    <%= f.text_field :autorizador_desconto_id %>
+    <%= f.label :autorizador_id %><br />
+    <%= f.text_field :autorizador_id %>
   </p>
   <p>
-    <%= f.submit "Update" %>
+    <%= f.submit 'Update' %>
   </p>
 <% end %>
 
