--- a/app/views/pedidos/index.html.erb
+++ b/app/views/pedidos/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th>Oficial</th>
+    <th>Tipo</th>
     <th>Data</th>
     <th>Previsao entrega</th>
     <th>Entrega</th>
@@ -13,30 +13,30 @@
     <th>Acrescimo</th>
     <th>Desconto</th>
     <th>Transportadora</th>
-    <th>Nome comprador</th>
+    <th>Comprador</th>
     <th>Observacao</th>
-    <th>Vendedor</th>
-    <th>Operador</th>
-    <th>Telemarketing</th>
-    <th>Plano pagamento</th>
+    <th>Funcionario</th>
     <th>Endereco entrega</th>
     <th>Minuta</th>
     <th>Area</th>
-    <th>Preco especial</th>
+    <th>Operador</th>
+    <th>Telemarketing</th>
+    <th>Especial</th>
+    <th>Registro</th>
     <th>Empresa</th>
     <th>Status</th>
     <th>Estorno</th>
-    <th>Funcionario estorno</th>
+    <th>Operador estorno</th>
     <th>Comissao vendedor</th>
     <th>Comissao telemarketing</th>
     <th>Venda externa</th>
-    <th>Desconto complemetar</th>
-    <th>Autorizador desconto</th>
+    <th>Desconto complementar</th>
+    <th>Autorizador</th>
   </tr>
 
-<% for pedido in @pedidos %>
+<% @pedidos.each do |pedido| %>
   <tr>
-    <td><%=h pedido.oficial %></td>
+    <td><%=h pedido.tipo %></td>
     <td><%=h pedido.data %></td>
     <td><%=h pedido.previsao_entrega %></td>
     <td><%=h pedido.entrega %></td>
@@ -47,25 +47,25 @@
     <td><%=h pedido.acrescimo %></td>
     <td><%=h pedido.desconto %></td>
     <td><%=h pedido.transportadora_id %></td>
-    <td><%=h pedido.nome_comprador %></td>
+    <td><%=h pedido.comprador %></td>
     <td><%=h pedido.observacao %></td>
-    <td><%=h pedido.vendedor_id %></td>
-    <td><%=h pedido.operador_id %></td>
-    <td><%=h pedido.telemarketing_id %></td>
-    <td><%=h pedido.plano_pagamento_id %></td>
+    <td><%=h pedido.funcionario_id %></td>
     <td><%=h pedido.endereco_entrega %></td>
     <td><%=h pedido.minuta_id %></td>
     <td><%=h pedido.area_id %></td>
-    <td><%=h pedido.preco_especial %></td>
+    <td><%=h pedido.operador_id %></td>
+    <td><%=h pedido.telemarketing_id %></td>
+    <td><%=h pedido.especial %></td>
+    <td><%=h pedido.registro %></td>
     <td><%=h pedido.empresa_id %></td>
     <td><%=h pedido.status %></td>
     <td><%=h pedido.estorno %></td>
-    <td><%=h pedido.funcionario_estorno_id %></td>
+    <td><%=h pedido.operador_estorno_id %></td>
     <td><%=h pedido.comissao_vendedor %></td>
     <td><%=h pedido.comissao_telemarketing %></td>
     <td><%=h pedido.venda_externa %></td>
-    <td><%=h pedido.desconto_complemetar %></td>
-    <td><%=h pedido.autorizador_desconto_id %></td>
+    <td><%=h pedido.desconto_complementar %></td>
+    <td><%=h pedido.autorizador_id %></td>
     <td><%= link_to 'Show', pedido %></td>
     <td><%= link_to 'Edit', edit_pedido_path(pedido) %></td>
     <td><%= link_to 'Destroy', pedido, :confirm => 'Are you sure?', :method => :delete %></td>
