correcao de inflections

--- a/app/views/expedicoes/index.html.erb
+++ b/app/views/expedicoes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing expedicaos</h1>
+<h1>Listing expedicoes</h1>
 
 <table>
   <tr>
@@ -10,7 +10,7 @@
     <th>Vidro</th>
   </tr>
 
-<% @expedicaos.each do |expedicao| %>
+<% @expedicoes.each do |expedicao| %>
   <tr>
     <td><%=h expedicao.minuta_id %></td>
     <td><%=h expedicao.produto_id %></td>
