--- a/app/views/regioes/index.html.erb
+++ b/app/views/regioes/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing regiaos</h1>
+<h1>Listing regioes</h1>
 
 <table>
   <tr>
     <th>Descricao</th>
   </tr>
 
-<% @regiaos.each do |regiao| %>
+<% @regioes.each do |regiao| %>
   <tr>
     <td><%=h regiao.descricao %></td>
     <td><%= link_to 'Show', regiao %></td>
