--- a/app/views/expedicoes/show.html.erb
+++ b/app/views/expedicoes/show.html.erb
@@ -30,4 +30,4 @@
 
 
 <%= link_to 'Edit', edit_expedicao_path(@expedicao) %> |
-<%= link_to 'Back', expedicaos_path %>
+<%= link_to 'Back', expedicoes_path %>
