--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,135 +1,11 @@
-<h1>New cliente</h1>
+<h2>Inserindo Novo cliente</h2>
 
 <% form_for(@cliente) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :tipo_cliente %><br />
-    <%= f.text_field :tipo_cliente %>
-  </p>
-  <p>
-    <%= f.label :cpf_cnpj %><br />
-    <%= f.text_field :cpf_cnpj %>
-  </p>
-  <p>
-    <%= f.label :razao_social %><br />
-    <%= f.text_field :razao_social %>
-  </p>
-  <p>
-    <%= f.label :nome_fantasia %><br />
-    <%= f.text_field :nome_fantasia %>
-  </p>
-  <p>
-    <%= f.label :documento %><br />
-    <%= f.text_field :documento %>
-  </p>
-  <p>
-    <%= f.label :endereco %><br />
-    <%= f.text_field :endereco %>
-  </p>
-  <p>
-    <%= f.label :complemento %><br />
-    <%= f.text_field :complemento %>
-  </p>
-  <p>
-    <%= f.label :cidade_id %><br />
-    <%= f.text_field :cidade_id %>
-  </p>
-  <p>
-    <%= f.label :uf_id %><br />
-    <%= f.text_field :uf_id %>
-  </p>
-  <p>
-    <%= f.label :cep %><br />
-    <%= f.text_field :cep %>
-  </p>
-  <p>
-    <%= f.label :referencia %><br />
-    <%= f.text_field :referencia %>
-  </p>
-  <p>
-    <%= f.label :fone_pessoal %><br />
-    <%= f.text_field :fone_pessoal %>
-  </p>
-  <p>
-    <%= f.label :fone_comercial %><br />
-    <%= f.text_field :fone_comercial %>
-  </p>
-  <p>
-    <%= f.label :fone_celular %><br />
-    <%= f.text_field :fone_celular %>
-  </p>
-  <p>
-    <%= f.label :endereco_entrega %><br />
-    <%= f.text_field :endereco_entrega %>
-  </p>
-  <p>
-    <%= f.label :regiao_entrega_id %><br />
-    <%= f.text_field :regiao_entrega_id %>
-  </p>
-  <p>
-    <%= f.label :cidade_entrega_id %><br />
-    <%= f.text_field :cidade_entrega_id %>
-  </p>
-  <p>
-    <%= f.label :area_id %><br />
-    <%= f.text_field :area_id %>
-  </p>
-  <p>
-    <%= f.label :referencias_bancaria %><br />
-    <%= f.text_area :referencias_bancaria %>
-  </p>
-  <p>
-    <%= f.label :referencias_comerciais %><br />
-    <%= f.text_area :referencias_comerciais %>
-  </p>
-  <p>
-    <%= f.label :observacao %><br />
-    <%= f.text_area :observacao %>
-  </p>
-  <p>
-    <%= f.label :info_serasa %><br />
-    <%= f.text_area :info_serasa %>
-  </p>
-  <p>
-    <%= f.label :data_nascimento %><br />
-    <%= f.date_select :data_nascimento %>
-  </p>
-  <p>
-    <%= f.label :nome_comprador %><br />
-    <%= f.text_field :nome_comprador %>
-  </p>
-  <p>
-    <%= f.label :vendas_suspensas %><br />
-    <%= f.check_box :vendas_suspensas %>
-  </p>
-  <p>
-    <%= f.label :observacao_suspensao_venda %><br />
-    <%= f.text_area :observacao_suspensao_venda %>
-  </p>
-  <p>
-    <%= f.label :limite_credito %><br />
-    <%= f.text_field :limite_credito %>
-  </p>
-  <p>
-    <%= f.label :saldo_devedor %><br />
-    <%= f.text_field :saldo_devedor %>
-  </p>
-  <p>
-    <%= f.label :status %><br />
-    <%= f.text_field :status %>
-  </p>
-  <p>
-    <%= f.label :prazo_medio_maximo %><br />
-    <%= f.text_field :prazo_medio_maximo %>
-  </p>
-  <p>
-    <%= f.label :data_inclusao_prazo_medio %><br />
-    <%= f.date_select :data_inclusao_prazo_medio %>
-  </p>
-  <p>
-    <%= f.submit "Create" %>
+<%= render :partial => "form", :locals => { :f => f} %>
+    <%= f.submit "Incluir" %>
   </p>
 <% end %>
 
-<%= link_to 'Back', clientes_path %>
+<%= link_to 'Retornar', clientes_path %>
