--- a/app/views/cidades/show.html.erb
+++ b/app/views/cidades/show.html.erb
@@ -1,6 +1,11 @@
 <p>
-  <b>Descricao:</b>
-  <%=h @cidade.descricao %>
+  <b>Uf:</b>
+  <%=h @cidade.uf %>
+</p>
+
+<p>
+  <b>Cidade:</b>
+  <%=h @cidade.cidade %>
 </p>
 
 
