--- a/app/views/itens_nota_fiscal/show.html.erb
+++ b/app/views/itens_nota_fiscal/show.html.erb
@@ -54,5 +54,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_item_nota_fiscal_path(@item_nota_fiscal) %> |
-<%= link_to 'Back', itens_nota_fiscal_path %>
+<%= link_to 'Editar', edit_item_nota_fiscal_path(@item_nota_fiscal) %> |
+<%= link_to 'Voltar', itens_nota_fiscal_path %>
