--- a/app/views/itens_nota_fiscal/new.html.erb
+++ b/app/views/itens_nota_fiscal/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New item_nota_fiscal</h1>
+<h1>Item Nota Fiscal</h1>
 
 <% form_for(@item_nota_fiscal) do |f| %>
   <%= f.error_messages %>
@@ -6,8 +6,8 @@
   <=% render :partial => 'form', :locals => {:f => f} %>
   
   <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', itens_nota_fiscal_path %>
+<%= link_to 'Voltar', itens_nota_fiscal_path %>
