--- a/app/views/planosdepagamento/show.html.erb
+++ b/app/views/planosdepagamento/show.html.erb
@@ -4,5 +4,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_planodepagamento_path(@planodepagamento) %> |
-<%= link_to 'Back', planosdepagamento_path %>
+<%= link_to 'Editar', edit_planodepagamento_path(@planodepagamento) %> |
+<%= link_to 'Voltar', planosdepagamento_path %>
