--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing produtos</h1>
+<h1>Produtos</h1>
 
 <table>
   <tr>
@@ -48,13 +48,13 @@
     <td><%=h produto.custo %></td>
     <td><%=h produto.cadastro_custo %></td>
     <td><%=h produto.kit %></td>
-    <td><%= link_to 'Show', produto %></td>
-    <td><%= link_to 'Edit', edit_produto_path(produto) %></td>
-    <td><%= link_to 'Destroy', produto, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', produto %></td>
+    <td><%= link_to 'Editar', edit_produto_path(produto) %></td>
+    <td><%= link_to 'Excluir', produto, :confirm => 'Confirma exclusao do produto: #{produto.descricao}?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New produto', new_produto_path %>
+<%= link_to 'Novo Produto', new_produto_path %>
