--- a/app/views/transportadoras/new.html.erb
+++ b/app/views/transportadoras/new.html.erb
@@ -1,15 +1,13 @@
-<h1>New transportadora</h1>
+<h1>Nova Transportadora</h1>
 
 <% form_for(@transportadora) do |f| %>
   <%= f.error_messages %>
-
+  
+  <%= render :partial => 'form', :locals => {:f => f} %>
+   
   <p>
-    <%= f.label :razao_social %><br />
-    <%= f.text_field :razao_social %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', transportadoras_path %>
+<%= link_to 'Voltar', transportadoras_path %>
