--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -37,10 +37,14 @@
   <b>Cidade:</b>
   <%=h @cliente.cidade_id %>
 </p>
+<p>
+  <b>Bairro:</b>
+  <%=h @cliente.bairro %>
+</p>
 
 <p>
   <b>Uf:</b>
-  <%=h @cliente.uf_id %>
+  <%=h @cliente.uf %>
 </p>
 
 <p>
