padronizacao nomes view transportadora

--- a/app/views/transportadoras/edit.html.erb
+++ b/app/views/transportadoras/edit.html.erb
@@ -6,7 +6,7 @@
   <%= render :partial => 'form', :locals => {:f => f} %> 
    
   <p>
-    <%= f.submit 'Atualizar' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
