--- a/app/views/transportadoras/show.html.erb
+++ b/app/views/transportadoras/show.html.erb
@@ -4,5 +4,5 @@
 </p>
 
 
-<%= link_to 'Editar', edit_transportadora_path(@transportadora) %> |
+<%= link_to 'Alterar', edit_transportadora_path(@transportadora) %> |
 <%= link_to 'Voltar', transportadoras_path %>
