--- a/app/views/produtos/show.html.erb
+++ b/app/views/produtos/show.html.erb
@@ -104,5 +104,5 @@
 </p>
 
 
-<%= link_to 'Editar', edit_produto_path(@produto) %> |
+<%= link_to 'Alterar', edit_produto_path(@produto) %> |
 <%= link_to 'Voltar', produtos_path %>
