--- a/app/views/planosdepagamento/new.html.erb
+++ b/app/views/planosdepagamento/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New planodepagamento</h1>
+<h1>Novo Plano de Pagamento</h1>
 
 <% form_for(@planodepagamento) do |f| %>
   <%= f.error_messages %>
@@ -8,8 +8,8 @@
     <%= f.text_field :descricao %>
   </p>
   <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', planosdepagamento_path %>
+<%= link_to 'Voltar', planosdepagamento_path %>
