--- a/app/views/areas/edit.html.erb
+++ b/app/views/areas/edit.html.erb
@@ -2,19 +2,8 @@
 
 <% form_for(@area) do |f| %>
   <%= f.error_messages %>
+  <%= render :partial => "form",  :locals => { :f => f} %>
 
-  <p>
-    <%= f.label :descricao %><br />
-    <%= f.text_field :descricao %>
-  </p>
-  <p>
-    <%= f.label :cidade_id %><br />
-    <%= f.text_field :cidade_id %>
-  </p>
-  <p>
-    <%= f.label :roteiro_id %><br />
-    <%= f.text_field :roteiro_id %>
-  </p>
   <p>
     <%= f.submit 'Update' %>
   </p>
