--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,10 +1,9 @@
-<h2>Editando cliente</h2>
-
 <% form_for(@cliente) do |f| %>
   <%= f.error_messages %>
-<%= render :partial => "form",  :locals => { :f => f} %>
-    <%= f.submit "Salvar Alterações" %>
+  <%= render :partial => "form",  :locals => { :f => f} %>
+
+  <%= f.submit "Salvar" %>
   </p>
 <% end %>
 
-<%= link_to 'Retornar', clientes_path %>
+<%= link_to 'Voltar', clientes_path %>
