--- a/app/views/funcionarios/show.html.erb
+++ b/app/views/funcionarios/show.html.erb
@@ -164,5 +164,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_funcionario_path(@funcionario) %> |
-<%= link_to 'Back', funcionarios_path %>
+<%= link_to 'Alterar', edit_funcionario_path(@funcionario) %> |
+<%= link_to 'Voltar', funcionarios_path %>
