--- a/app/views/grupos/show.html.erb
+++ b/app/views/grupos/show.html.erb
@@ -14,5 +14,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_grupo_path(@grupo) %> |
-<%= link_to 'Back', grupos_path %>
+<%= link_to 'Alterar', edit_grupo_path(@grupo) %> |
+<%= link_to 'Voltar', grupos_path %>
