--- a/app/views/itens_minutas/show.html.erb
+++ b/app/views/itens_minutas/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_itens_minuta_path(@itens_minuta) %> |
-<%= link_to 'Back', itens_minutas_path %>
+<%= link_to 'Alterar', edit_itens_minuta_path(@itens_minuta) %> |
+<%= link_to 'Voltar', itens_minutas_path %>
