--- a/app/views/minutas/show.html.erb
+++ b/app/views/minutas/show.html.erb
@@ -44,5 +44,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_minuta_path(@minuta) %> |
-<%= link_to 'Back', minutas_path %>
+<%= link_to 'Alterar', edit_minuta_path(@minuta) %> |
+<%= link_to 'Voltar', minutas_path %>
