--- a/app/views/funcionarios/index.html.erb
+++ b/app/views/funcionarios/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing funcionarios</h1>
+<h1>Listando funcionarios</h1>
 
 <table>
   <tr>
@@ -72,13 +72,13 @@
     <td><%=h funcionario.observacao %></td>
     <td><%=h funcionario.aci %></td>
     <td><%=h funcionario.email %></td>
-    <td><%= link_to 'Show', funcionario %></td>
-    <td><%= link_to 'Edit', edit_funcionario_path(funcionario) %></td>
-    <td><%= link_to 'Destroy', funcionario, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', funcionario %></td>
+    <td><%= link_to 'Alterar', edit_funcionario_path(funcionario) %></td>
+    <td><%= link_to 'Excluir', funcionario, :confirm => 'Confirme exclusão do funcionario #{funcionario.nome}?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New funcionario', new_funcionario_path %>
+<%= link_to 'Novo funcionario', new_funcionario_path %>
