--- a/app/views/grupos/new.html.erb
+++ b/app/views/grupos/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New grupo</h1>
+<h1>Novo grupo</h1>
 
 <% form_for(@grupo) do |f| %>
   <%= f.error_messages %>
@@ -16,8 +16,8 @@
     <%= f.check_box :unificado %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit "Salvar" %>
   </p>
 <% end %>
 
-<%= link_to 'Back', grupos_path %>
+<%= link_to 'Voltar', grupos_path %>
