--- a/app/views/itens_minutas/new.html.erb
+++ b/app/views/itens_minutas/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New itens_minuta</h1>
+<h1>Novo item de minuta</h1>
 
 <% form_for(@itens_minuta) do |f| %>
   <%= f.error_messages %>
@@ -12,8 +12,8 @@
     <%= f.text_field :qtde %>
   </p>
   <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', itens_minutas_path %>
+<%= link_to 'Voltar', itens_minutas_path %>
