--- a/app/views/minutas/index.html.erb
+++ b/app/views/minutas/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing minutas</h1>
+<h1>Listando minutas</h1>
 
 <table>
   <tr>
@@ -24,13 +24,13 @@
     <td><%=h minuta.fechamento_financeiro %></td>
     <td><%=h minuta.funcionario_fechamento_financeiro_id %></td>
     <td><%=h minuta.roteiro_id %></td>
-    <td><%= link_to 'Show', minuta %></td>
-    <td><%= link_to 'Edit', edit_minuta_path(minuta) %></td>
-    <td><%= link_to 'Destroy', minuta, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', minuta %></td>
+    <td><%= link_to 'Alterar', edit_minuta_path(minuta) %></td>
+    <td><%= link_to 'Excluir', minuta, :confirm => 'Confirme exclusão da minuta #{minuta.id}?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New minuta', new_minuta_path %>
+<%= link_to 'Nova minuta', new_minuta_path %>
