--- a/app/views/minutas/new.html.erb
+++ b/app/views/minutas/new.html.erb
@@ -1,15 +1,15 @@
-<h1>New minuta</h1>
+<h1>Nova minuta</h1>
 
 <% form_for(@minuta) do |f| %>
   <%= f.error_messages %>
 
   <p>
     <%= f.label :data %><br />
-    <%= f.date_select :data %>
+    <%= f.calendar_date_select :data %>
   </p>
   <p>
     <%= f.label :fechamento %><br />
-    <%= f.date_select :fechamento %>
+    <%= f.calendar_date_select :fechamento %>
   </p>
   <p>
     <%= f.label :operador_fechamento_id %><br />
@@ -17,7 +17,7 @@
   </p>
   <p>
     <%= f.label :saida %><br />
-    <%= f.date_select :saida %>
+    <%= f.calendar_date_select :saida %>
   </p>
   <p>
     <%= f.label :obs %><br />
@@ -29,7 +29,7 @@
   </p>
   <p>
     <%= f.label :fechamento_financeiro %><br />
-    <%= f.date_select :fechamento_financeiro %>
+    <%= f.calendar_date_select :fechamento_financeiro %>
   </p>
   <p>
     <%= f.label :funcionario_fechamento_financeiro_id %><br />
@@ -40,8 +40,8 @@
     <%= f.text_field :roteiro_id %>
   </p>
   <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', minutas_path %>
+<%= link_to 'Voltar', minutas_path %>
