--- a/app/views/cores/new.html.erb
+++ b/app/views/cores/new.html.erb
@@ -8,8 +8,8 @@
     <%= f.text_field :descricao %>
   </p>
   <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Salvar' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', cores_path %>
+<%= link_to 'Voltar', cores_path %>
