--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -2,7 +2,8 @@
   <b>Tipo de Cliente:</b>
   <%=h @cliente.tipo_cliente == "F" ? "Pessoa Física" : "Pessoa Jurídica" %> - 
   <b>Cpf ou Cnpj:</b>
-  <%=h  @cliente.cpf_cnpj %>
+  <%=h  @cliente.cpf_cnpj %> -  <b>Status:</b>  <%=h @cliente.status == 'A' ? 'Ativo' : 'Inativo' %>
+</p>
 
 </p>
 
@@ -86,7 +87,7 @@
 
 <p>
   <b>Data nascimento:</b>
-  <%=h @cliente.data_nascimento %>
+  <%=h @cliente.data_nascimento.to_s_br %>
 </p>
 
 <p>
@@ -113,22 +114,6 @@
   <b>Saldo devedor:</b>
   <%=h @cliente.saldo_devedor.real.real_formatado %>
 </p>
-
-<p>
-  <b>Status:</b>
-  <%=h @cliente.status == 'A' ? 'Ativo' : 'Inativo' %>
-</p>
-
-<p>
-  <b>Prazo medio maximo:</b>
-  <%=h @cliente.prazo_medio_maximo %>
-</p>
-
-<p>
-  <b>Data inclusao prazo medio:</b>
-  <%=h @cliente.data_inclusao_prazo_medio %>
-</p>
-
 
 <%= link_to 'Alterar', edit_cliente_path(@cliente) %> |
 <%= link_to 'Retornar', clientes_path %>
