--- a/app/views/cores/index.html.erb
+++ b/app/views/cores/index.html.erb
@@ -1,20 +1,20 @@
-<h1>Listing cores</h1>
-
 <table>
   <tr>
+    <th>Id</th>
     <th>Descricao</th>
   </tr>
 
 <% @cores.each do |cor| %>
   <tr>
+    <td><%=h cor.id %></td>
     <td><%=h cor.descricao %></td>
-    <td><%= link_to 'Show', cor %></td>
-    <td><%= link_to 'Edit', edit_cor_path(cor) %></td>
-    <td><%= link_to 'Destroy', cor, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Exibir', cor %></td>
+    <td><%= link_to 'alterar', edit_cor_path(cor) %></td>
+    <td><%= link_to 'Excluir', cor, :confirm => "Excluir a Cor: #{cor.descricao} ?", :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New cor', new_cor_path %>
+<%= link_to 'Nova Cor', new_cor_path %>
