--- a/app/views/cores/show.html.erb
+++ b/app/views/cores/show.html.erb
@@ -1,8 +1,9 @@
 <p>
+  <b>Id:</b><%=h @cor.id %>
   <b>Descricao:</b>
   <%=h @cor.descricao %>
 </p>
 
 
-<%= link_to 'Edit', edit_cor_path(@cor) %> |
-<%= link_to 'Back', cores_path %>
+<%= link_to 'Alterar', edit_cor_path(@cor) %> |
+<%= link_to 'Voltar', cores_path %>
