PAU TOTAL nos métodos para mascara ....

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -12,7 +12,7 @@
 <% for cliente in @clientes %>
   <tr>
     <td><%= cliente.tipo_cliente == "F" ? "Pessoa Física" : "Pessoa Jurídica" %></td>
-    <td><%=h cliente.cpf_cnpj %></td>
+    <td><%=h cliente.cpf_cnpj_formatado %></td>
     <td><%=h cliente.razao_social %></td>
     <td><%=h cliente.nome_fantasia %></td>
     <%if cliente.cidade.nil? then %>
