Ajuste mascara Cliente

--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -40,7 +40,8 @@
 </p>
 
 <p>
-  <b>Telefones:</b><br>Pessoal: <%=h @cliente.fone_pessoal_formatado %> Comercial: <%=h @cliente.fone_comercial_formatado %> Celular: <%=h @cliente.fone_celular_formatado %>
+  <b>Telefones:</b><br>Pessoal: <%=h @cliente.fone_pessoal_formatado %> Comercial: <%=h @cliente.fone_comercial_formatado %> Celular: <%=h @cliente.fone_celular_formatado %><br>
+  <b>Telefones:</b><br>Pessoal: <%=h @cliente.fone_pessoal %> Comercial: <%=h @cliente.fone_comercial %> Celular: <%=h @cliente.fone_celular %>
 </p>
 
 <p>
